# GameASR

./: .env.example  .gitignore  README.md  api_spec.json  config.example.yaml  config.yaml  main.lua  pyproject.toml  requirements.txt  rpc_api.lua  rpc_api.spec  test_pipeline.py  user_prompt.txt
.github/workflows/: ci.yml
asr/: __init__.py  core.py  main.py
asr/components/: __init__.py  asr_service.py  audio_streamer.py  vad_processor.py
love2d_game/lua/: game_states.lua
love2d_game/lua/abstractions/: io.lua  rendering.lua  scene.lua
lua/: main.lua  main__.lua
lua/abstractions/: collision.lua  input.lua  physics.lua
lua_client_example/: README.md  rpc_api.lua  voice_client.lua
lua_client_example/game/: init.lua  main.lua
lua_client_example/game/lua/: game_states.lua
lua_client_example/game/lua/abstractions/: audio.lua  collision.lua  input.lua  physics.lua  ui.lua
scripts/: extract_knowledge.py  generate_api_spec.py  scaffold_bridge.py
tests/: test_asr.py  test_asr_tts_loop.py  test_audit_regressions.py  test_context_pruning.py  test_infrastructure.py  test_llm.py  test_llm_error.py  test_llm_integration.py  test_rag.py  test_tts.py
tests/bridge/: test_rpc_server.py
tests/infra/: test_audio.py  test_config.py  test_context.py  test_data.py  test_embedder.py  test_hotkey.py  test_registry.py  test_utils.py
tests/llm/: test_chaining.py  test_conversation.py  test_decoders.py  test_providers.py  test_session.py  test_tools.py
tests/pipeline/: test_callback.py  test_events.py  test_gate.py  test_integration.py  test_splitter.py
voice_control/: __init__.py  __main__.py  config.defaults.yaml  events.py  exceptions.py  gui.py  gui_qt.py  gui_tk.py  hotkey_dispatcher.py  pipeline.py  prompts.yaml  transcript_gate.py
voice_control/asr/: __init__.py  __main__.py  core.py  model.py
voice_control/asr/components/: __init__.py  asr_service.py  audio_streamer.py  vad_processor.py
voice_control/asr/models/: __init__.py  base.py  kyutai.py  parakeetv2.py  wakeword.py
voice_control/bridge/: __init__.py  llm_server.py  rpc_client.lua  rpc_server.py  rpc_tool_client.py  scaffold.py  tool_client.py
voice_control/bridge/clients/cpp/: llm_client.cpp  llm_client.hpp  tool_server.cpp  tool_server.hpp
voice_control/bridge/clients/cs/: llm_client.cs  tool_server.cs
voice_control/bridge/clients/csharp/: tool_server.cs
voice_control/bridge/clients/gdscript/: llm_client.gd  tool_server.gd
voice_control/bridge/clients/javascript/: llm_client.js  tool_server.js
voice_control/bridge/clients/js/: llm_client.js  tool_server.js
voice_control/bridge/clients/lua/: llm_client.lua  rpc_api.lua  rpc_client.lua  rpc_tool_server.lua  tool_server.lua
voice_control/bridge/clients/python/: llm_client.py  tool_server.py
voice_control/common/: __init__.py  base.py  base_component.py  config.py  config_models.py  download_utils.py  logging_utils.py  model_manager.py  model_manifest.yaml  utils.py
voice_control/llm/: __init__.py  __main__.py  context.py  conversation.py  core.py  decoders.py  download.py  model.py  session.py  template_tool_call.py  tool_client.py  tools.py
voice_control/rag/: README.md  __init__.py  data.py  embeddings.py  explorer.py  generation.py  generator.py  graph.py  knowledge.py  knowledge_base.py  model.py  retrieval.py  retriever.py  triplet.py  validation.py
voice_control/rag/backends/: __init__.py  base.py  sqlite.py
voice_control/tts/: __init__.py  __main__.py  audio.py  core.py  download.py  model.py  player.py  setup_tts.py
voice_control/tts/components/: __init__.py  audio_player.py  tts_processor.py  tts_service.py
