[project]
name = "voice-control"
version = "0.1.0"
description = "A voice control system for applications."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
voice-control-bridge = "scripts.scaffold_bridge:main"

[tool.black]
line-length = 79
